# piano_ear_trainer

./: .gitignore  README.md  build_windows.bat  piano_ear_trainer.spec  pyproject.toml
assets/: icon.icns
piano_ear_trainer/: __init__.py  __main__.py  app.py
piano_ear_trainer/audio/: __init__.py  player.py
piano_ear_trainer/data/: __init__.py  notes.py
piano_ear_trainer/ui/: __init__.py  main_window.py  piano_keyboard.py
