[project]
name = "piano-ear-trainer"
version = "0.1.0"
description = "Приложение для тренировки музыкального слуха"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
# readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "PySide6>=6.8.0.2",
    "pygame>=2.5.0",
]

[project.scripts]
piano-ear-trainer = "piano_ear_trainer.app:main"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by black where possible

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
